--- a/.env-template
+++ b/.env-template
@@ -1,4 +1,4 @@
 DELTA_CONSUMER__CONN_STR=
 DELTA_CONSUMER__SUBSCRIPTION=rdf-patch-consumer
 DELTA_CONSUMER__TOPIC=rdf-patch-log
-DELTA_CONSUMER__SESSION_ID=main
+DELTA_CONSUMER__SESSION_ID= # your local dev session id
