--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+local.settings.json
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,database,macos,windows,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,database,macos,windows,linux
 
