--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ MarkupSafe==3.0.2
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyparsing==3.2.0
+rdf-delta@https://github.com/Kurrawong/rdf-delta-python/archive/refs/tags/0.2.4.zip
 rdflib==7.1.0
 sniffio==1.3.1
 typing_extensions==4.12.2
