--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 			"settings": { 
 				"mssql.connections": [
 					{
-						"server": "localhost,1433",
+						"server": "db,1433",
 						"database": "master",
 						"authenticationType": "SqlLogin",
 						"user": "sa",
@@ -26,13 +26,15 @@
 			},
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
 				"ms-vscode.vscode-node-azure-pack",
 				"ms-azuretools.vscode-docker",
 				"ms-mssql.mssql",
 				"github.copilot",
-				"github.codespaces"
+				"github.codespaces",
+				"esbenp.prettier-vscode",
+				"tamasfe.even-better-toml"
 			]
 		}
 	},
