--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,27 +13,62 @@ services:
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    network_mode: service:sb
     # Uncomment the next line to use a non-root user for all processes.
     # user: vscode
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
+  sb:
+    image: mcr.microsoft.com/azure-messaging/servicebus-emulator:latest
+    volumes:
+      - "./service-bus/config.json:/ServiceBus_Emulator/ConfigFiles/Config.json"
+    ports:
+      - "5672:5672"
+    environment:
+      SQL_SERVER: db
+      ACCEPT_EULA: Y
+    env_file:
+      - .env
+    depends_on:
+      - db
+
   db:
     image: mcr.microsoft.com/azure-sql-edge
     platform: linux/amd64
-    hostname: SQL-Library
-    container_name: SQL-Library
     restart: unless-stopped
     environment:
       ACCEPT_EULA: Y
     env_file:
       - .env
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 2048M
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
+
+  rdf-delta-server:
+    image: ghcr.io/kurrawong/rdf-delta
+    container_name: rdf-delta-server
+    ports:
+      - 9999:1066
+    command: java -jar /opt/rdf-delta/rdf-delta-server.jar --base /opt/rdf-delta/databases --file
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:1066"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+
+  fuseki:
+    build:
+      context: .
+      dockerfile: Dockerfile.fuseki
+    container_name: fuseki
+    ports:
+      - 9998:3030
+    command: ["/bin/bash", "-c", "/opt/rdf-delta/fuseki-entrypoint.sh"]
+    healthcheck:
+      test: ["CMD", "curl", "-I", "http://localhost:3030/ds"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
