--- a/event_persistence_consumer/Taskfile.yml
+++ b/event_persistence_consumer/Taskfile.yml
@@ -28,7 +28,7 @@ tasks:
       - uv tool run ruff check --fix
 
   dev:
-    desc: Run in dev mode
+    desc: Run the function app in dev mode
     cmds:
       - uv run func start
 
