build: generate requirements.txt

--- a/db_trigger/.env-template
+++ b/db_trigger/.env-template
@@ -1,4 +1,4 @@
-APP__CONN_STR=Endpoint=sb://sb;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
+APP__CONN_STR=Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
 APP__TOPIC=rdf-delta-events
 APP__SESSION=main
 APP__WS=false
