chore: streamline config for db_trigger

--- a/db_trigger/.env-template
+++ b/db_trigger/.env-template
@@ -1,4 +1,4 @@
-APP__CONN_STR=Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
-APP__TOPIC=rdf-delta-events
-APP__SESSION=main
-APP__WS=false
+SERVICE_BUS=Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
+TOPIC_NAME=rdf-delta-events
+SESSION_ID=main
+WS=false
