refactor: event persistence consumer now uses sql connection string

--- a/event_persistence_consumer/.env-template
+++ b/event_persistence_consumer/.env-template
@@ -1,3 +1,1 @@
-APP__MSSQL_SERVER=db,1433
-APP__MSSQL_DATABASE=rdf_delta
-APP__MSSQL_PASSWORD=P@ssw0rd!
+SqlConnectionString=DRIVER={ODBC Driver 17 for SQL Server};SERVER=db,1433;DATABASE=rdf_delta;UID=sa;PWD=P@ssw0rd!;
