--- a/db_trigger/Taskfile.yml
+++ b/db_trigger/Taskfile.yml
@@ -10,32 +10,27 @@ tasks:
     desc: Clean the venv
     cmds:
       - rm -rf .venv
+      - python -m venv .venv
     ignore_error: true
 
   install:
     desc: Set up the venv and install python dependencies
-    vars:
-      PYTHON_VERSION:
-        sh: cat .python-version | tr -d '\n'
     cmds:
       - task: clean
-      - uv sync
-
-  req:
-    desc: Generate the requirements.txt file
-    cmd: uv pip compile pyproject.toml -o requirements.txt
+      - .venv/bin/pip install -r requirements.txt
+      - .venv/bin/pip install -r requirements-dev.txt
 
   code:
     desc: Run the code linting and formatting
     cmds:
-      - uv tool run ruff format
-      - uv tool run ruff check --fix
+      - .venv/bin/ruff format
+      - .venv/bin/ruff check --fix
 
   dev:
     desc: Run the function app in dev mode
     cmds:
-      - uv run func start -p 7071
+      - func start -p 7071
 
   test:
     desc: Run the tests
-    cmd: uv run pytest
+    cmd: .venv/bin/pytest
