--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,26 +13,26 @@ services:
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:sb
+    network_mode: service:storage
     # Uncomment the next line to use a non-root user for all processes.
     # user: vscode
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-  sb:
-    image: mcr.microsoft.com/azure-messaging/servicebus-emulator:latest
-    volumes:
-      - "./service-bus/config.json:/ServiceBus_Emulator/ConfigFiles/Config.json"
-    ports:
-      - "5672:5672"
-    environment:
-      SQL_SERVER: db
-      ACCEPT_EULA: Y
-    env_file:
-      - .env
-    depends_on:
-      - db
+  # sb:
+  #   image: mcr.microsoft.com/azure-messaging/servicebus-emulator:latest
+  #   volumes:
+  #     - "./service-bus/config.json:/ServiceBus_Emulator/ConfigFiles/Config.json"
+  #   ports:
+  #     - "5672:5672"
+  #   environment:
+  #     SQL_SERVER: db
+  #     ACCEPT_EULA: Y
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - db
 
   db:
     image: mcr.microsoft.com/azure-sql-edge
