--- a/db_trigger/.env-template
+++ b/db_trigger/.env-template
@@ -1,4 +1,5 @@
-SERVICE_BUS=Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
+SQL_CONNECTION_STRING_ODBC=DRIVER={ODBC Driver 17 for SQL Server};SERVER=db,1433;DATABASE=rdf_delta;UID=sa;PWD=P@ssw0rd!;TrustServerCertificate=True;
+SERVICE_BUS=Endpoint=sb://sb;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
 TOPIC_NAME=rdf-delta-events
 SESSION_ID=main
 WS=false
