--- a/event_persistence_consumer/.env-template
+++ b/event_persistence_consumer/.env-template
@@ -1,1 +1,4 @@
 SqlConnectionString=DRIVER={ODBC Driver 17 for SQL Server};SERVER=db,1433;DATABASE=rdf_delta;UID=sa;PWD=P@ssw0rd!;
+
+# Used by sb_producer.py
+SERVICE_BUS=Endpoint=Endpoint=sb://sb;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;
