--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -34,15 +34,15 @@ services:
   #   depends_on:
   #     - db
 
-  db:
-    image: mcr.microsoft.com/azure-sql-edge
-    platform: linux/amd64
-    environment:
-      ACCEPT_EULA: Y
-    env_file:
-      - .env
-    # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
+  # db:
+  #   image: mcr.microsoft.com/azure-sql-edge
+  #   platform: linux/amd64
+  #   environment:
+  #     ACCEPT_EULA: Y
+  #   env_file:
+  #     - .env
+  #   # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
+  #   # (Adding the "ports" property to this file will not forward from a Codespace.)
   
   storage:
     image: mcr.microsoft.com/azure-storage/azurite
