docs(epc): add crucial python and db driver version info

--- a/event_persistence_consumer/.env-template
+++ b/event_persistence_consumer/.env-template
@@ -1,3 +1,4 @@
+# Used by init_db.py
 SqlConnectionString=DRIVER={ODBC Driver 17 for SQL Server};SERVER=db,1433;DATABASE=rdf_delta;UID=sa;PWD=P@ssw0rd!;
 
 # Used by sb_producer.py
