--- a/db_trigger/pyproject.toml
+++ b/db_trigger/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "Edmond Chuc", email = "edmond@kurrawong.ai" }
 ]
 readme = "README.md"
-requires-python = "==3.11.9"
+requires-python = "^3.12"
 
 [tool.ruff.lint]
 extend-select = ["I"]
