--- a/event_persistence_consumer/requirements.txt
+++ b/event_persistence_consumer/requirements.txt
@@ -1,35 +1,24 @@
--e ./event_persistence_consumer  # manual entry
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-attrs==24.3.0
-azure-core==1.32.0
-azure-functions==1.21.3
+-e ./event_persistence_consumer
+azure-core==1.33.0
+azure-functions==1.23.0
 azure-identity==1.21.0
-azure-servicebus==7.13.0
-certifi==2024.12.14
+azure-servicebus==7.14.2
+certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
-frozenlist==1.5.0
 idna==3.10
 isodate==0.7.2
-msal==1.32.0
+MarkupSafe==3.0.2
+msal==1.32.1
 msal-extensions==1.3.1
-multidict==6.1.0
-propcache==0.2.1
 pycparser==2.22
-pydantic==2.10.4
-pydantic-settings==2.6.1
-pydantic_core==2.27.2
 PyJWT==2.10.1
 pyodbc==5.2.0
-pyparsing==3.2.1
-python-dotenv==1.0.1
-rdflib==7.1.1
+pyparsing==3.2.3
+rdflib==7.1.4
 requests==2.32.3
 six==1.17.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-yarl==1.18.3
+typing_extensions==4.13.2
+urllib3==2.4.0
+Werkzeug==3.1.3
