--- a/rdf_delta_consumer/requirements.txt
+++ b/rdf_delta_consumer/requirements.txt
@@ -1,4 +1,21 @@
-azure-functions==1.21.3
-Jinja2==3.1.4
-rdf-delta@https://github.com/Kurrawong/rdf-delta-python/archive/refs/tags/0.2.4.zip
-rdflib==7.1.0
+annotated-types==0.7.0
+anyio==4.9.0
+azure-functions==1.23.0
+certifi==2025.1.31
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+Jinja2==3.1.6
+lark==1.2.2
+loguru==0.7.3
+MarkupSafe==3.0.2
+pydantic==2.11.3
+pydantic_core==2.33.1
+pyparsing==3.2.3
+rdf-delta @ https://github.com/Kurrawong/rdf-delta-python/archive/refs/tags/0.2.4.zip#sha256=22a40ddec8aed57d904d3e5617e0beed2f089cab1b714f24c15c546a512a12e0
+rdflib==7.1.4
+sniffio==1.3.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+Werkzeug==3.1.3
