--- a/event_persistence_consumer/pyproject.toml
+++ b/event_persistence_consumer/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 
-requires-python = "~=3.11"
+requires-python = "^=3.12"
 
 [build-system]
 requires = ["hatchling"]
