--- a/deploy-gswasdt.yaml
+++ b/deploy-gswasdt.yaml
@@ -8,7 +8,7 @@ variables:
   myDestinationFolder: '$(System.ArtifactsDirectory)'
  
 stages:
-- stage: Build and Deploy
+- stage: Build_and_Deploy
   displayName: Build and Deploy Stage
  
   jobs:
