--- a/deploy-gswaepc.yaml
+++ b/deploy-gswaepc.yaml
@@ -15,6 +15,14 @@ stages:
         vmImage: 'ubuntu-latest'
 
       steps:
+        - task: UsePythonVersion@0
+          inputs:
+            versionSpec: 3.12
+
+        - bash: |
+            pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+          workingDirectory: $(workingDirectory)
+
         - task: ArchiveFiles@2
           inputs:
             includeRootFolder: false
